--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <header class="header">
       <nav>
         <a class="logo header-logo" href="./index.html">
-          <span class="logo-accent">Web</span>Studio
+          Web<span class="logo-accent">Studio</span>
         </a>
         <ul class="header-nav">
           <li class="header-nav-item">
-            <a class="header-nav-link" href="#">Studio</a>
+            <a class="header-nav-link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="header-nav-link" href="#">Portfolio</a>
+            <a class="header-nav-link" href="">Portfolio</a>
           </li>
           <li class="header-nav-item">
-            <a class="header-nav-link" href="#">Contacts</a>
+            <a class="header-nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +59,7 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="about">
-        <h2 class="section-title about-title visually-hidden">About us</h2>
+        <h2 hidden class="section-title about-title">About us</h2>
         <ul class="about-list">
           <li class="about-card">
             <h3 class="about-subtitle">Strategy</h3>
