--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </main>
     <footer class="footer">
       <a class="logo footer-logo" href="./index.html">
-        <span class="logo-accent">Web</span>Studio
+        Web<span class="logo-accent">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
